--- a/templates/store/nextPage.html.twig
+++ b/templates/store/nextPage.html.twig
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="d-grid">
-                    <a href="?name={{ game.title }}" class="btn btn-outline-primary stretched-link">
+                    <a href="{{ path('app_game_about', {'id': game.id}) }}" class="btn btn-outline-primary stretched-link">
                         View Details <i class="fas fa-arrow-right ms-2"></i>
                     </a>
                 </div>
