--- a/templates/store/index.html.twig
+++ b/templates/store/index.html.twig
@@ -8,7 +8,14 @@
 {% endblock %}
 
 {% block body %}
-    <section class="py-5 bg-dark">
+    <section class="py-5 bg-dark text-white">
+        <div class="container">
+            <h1 class="display-5 fw-bold mb-4">Welcome to the GameHub Store</h1>
+            <p class="lead">Browse our collection of games and accessories. Find your next adventure!</p>
+        </div>
+    </section>
+
+    <section class="py-5">
         <div class="container px-4">
             <div class="row g-4" id="games-container">
                 {% include 'store/nextPage.html.twig' %}
