--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -113,7 +113,7 @@
 
               <!-- Register buttons -->
               <div class="text-center mt-4">
-                <p class="mb-3 text-light">or create an account:</p><a href="/signup">Here</a></p>
+                <p class="mb-3 text-light">or <a href="/signup">create an account</a></p>
                 
               </div>
             </form>
